--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <title>To Do App List</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-     <h1 id="head">To Do App List</h1>
-     
-   <input id="TaskText"  type="text" placeholder="Add new task">
-   <button id="button">Add</button>
+<body class="bg-white flex justify-center items-center">
+    <div class=" mt-5 space-y-6  p-3 border border-2 rounded-lg gap-5 w-96 justify-between
+    shadow-lg ">
 
+     <h1 id="head" class="font-bold hover:text-blue-300  text-lg text-blue-400 md:text-3xl lg:text-4xl text-center">To Do App List</h1>
+        <div class="inline-flex gap-10 p-0">
+   <input id="TaskInput"  type="text" placeholder="Add new task" class="border border-2 rounded-lg p-1 ">
+   
+   <button id="button" class="justify-start rounded-lg p-2 bg-green-400 hover:text-green-200">Add</button>
+   
      <ul id="TaskList"></ul>
-
+    
+    </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
