head, input, and button elements

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
      <h1 id="head" class="font-bold hover:text-blue-300  text-lg text-blue-400 md:text-3xl lg:text-4xl text-center">To Do App List</h1>
         <div class="inline-flex gap-10 p-0">
-   <input id="TaskInput"  type="text" placeholder="Add new task" class="border border-2 rounded-lg p-1 ">
+   <input id="TaskInput"  type="text" placeholder="Add new task" class="border border-2 rounded-lg p-1 flex-1">
    
-   <button id="button" class="justify-start rounded-lg p-2 bg-green-400 hover:text-green-200">Add</button>
+   <button id="button" class=" rounded-lg p-2 bg-green-400 hover:text-green-200">Add</button>
    
      <ul id="TaskList"></ul>
     
